# AI_Daily_Paper

./: .env  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-report.yml
configs/: categories.yaml  prompt_templates.yaml  sources.yaml
data/output/2026-04-22/: article.html  article.json
data/output/2026-04-23/: article.html  article.json  article.md
data/output/2026-04-24/: article.html  article.json
data/raw/: raw_2026-04-22.json  raw_2026-04-24.json
docs/: index.html
docs/ai-daily/: index.html
docs/articles/: 2026-04-22.md  2026-04-24.html  2026-04-24.md
src/: __init__.py  article.html  config.py  logger.py  main.py  scheduler.py
src/fetchers/: __init__.py  rss_fetcher.py  source_manager.py
src/llm/: __init__.py  article_rewriter.py  llm_client.py  summarizer.py  title_generator.py
src/models/: schemas.py
src/processors/: __init__.py  classifier.py  cleaner.py  deduplicator.py  keyword_extractor.py
src/publishers/: __init__.py  feishu_bot.py
src/renderers/: __init__.py  html_renderer.py  image_renderer.py  markdown_renderer.py  poster_renderer.py
src/utils/: date_utils.py  file_utils.py  retry.py
tests/: test_deduplicator.py  test_feishu.py  test_fetcher.py  test_llm.py  test_poster_renderer.py  test_renderer.py
